tests/baselines/reference/declarationEmitExpandoPropertyPrivateName.errors.txt
a.ts(2,33): error TS2352: Conversion of type 'null' to type 'I' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
b.ts(4,1): error TS4032: Property 'val' of exported interface has or is using name 'I' from private module '"a"'.


==== a.ts (1 errors) ====
    interface I {}
    export function f(): I { return null as I; }
                                    ~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'I' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
==== b.ts (1 errors) ====
    import {f} from "./a";
    
    export function q() {}
    q.val = f();
    ~~~~~
!!! error TS4032: Property 'val' of exported interface has or is using name 'I' from private module '"a"'.
    